--- a/src/output.css
+++ b/src/output.css
@@ -896,6 +896,10 @@ html{
   bottom: 0px;
 }
 
+.-left-\[50px\]{
+  left: -50px;
+}
+
 .bottom-0{
   bottom: 0px;
 }
@@ -932,6 +936,14 @@ html{
   top: 50%;
 }
 
+.top-\[23\.5px\]{
+  top: 23.5px;
+}
+
+.top-\[40px\]{
+  top: 40px;
+}
+
 .top-full{
   top: 100%;
 }
@@ -940,12 +952,20 @@ html{
   z-index: 10;
 }
 
+.z-20{
+  z-index: 20;
+}
+
 .z-\[60\]{
   z-index: 60;
 }
 
 .col-span-12{
   grid-column: span 12 / span 12;
+}
+
+.m-3{
+  margin: 0.75rem;
 }
 
 .mx-2{
@@ -1185,8 +1205,16 @@ html{
   height: 2rem;
 }
 
+.h-\[335px\]{
+  height: 335px;
+}
+
 .h-\[380px\]{
   height: 380px;
+}
+
+.h-\[4px\]{
+  height: 4px;
 }
 
 .h-auto{
@@ -1249,6 +1277,14 @@ html{
   width: 75%;
 }
 
+.w-\[25px\]{
+  width: 25px;
+}
+
+.w-\[300px\]{
+  width: 300px;
+}
+
 .w-\[calc\(100\%-2rem\)\]{
   width: calc(100% - 2rem);
 }
@@ -1300,10 +1336,6 @@ html{
 
 .flex-none{
   flex: none;
-}
-
-.flex-shrink{
-  flex-shrink: 1;
 }
 
 .flex-shrink-0{
@@ -1574,6 +1606,10 @@ html{
   border-radius: 0.25rem;
 }
 
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
 .rounded-3xl{
   border-radius: 1.5rem;
 }
@@ -1674,6 +1710,12 @@ html{
 .border-white{
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+}
+
+.border-x-yellow-500{
+  --tw-border-opacity: 1;
+  border-left-color: rgb(234 179 8 / var(--tw-border-opacity, 1));
+  border-right-color: rgb(234 179 8 / var(--tw-border-opacity, 1));
 }
 
 .border-t-transparent{
@@ -1809,6 +1851,11 @@ html{
   padding-bottom: 0.125rem !important;
 }
 
+.px-0\.5{
+  padding-left: 0.125rem;
+  padding-right: 0.125rem;
+}
+
 .px-1{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -1891,6 +1938,10 @@ html{
   padding-bottom: 7rem;
 }
 
+.pb-3{
+  padding-bottom: 0.75rem;
+}
+
 .pb-4{
   padding-bottom: 1rem;
 }
@@ -1925,6 +1976,10 @@ html{
 
 .pt-20{
   padding-top: 5rem;
+}
+
+.pt-3{
+  padding-top: 0.75rem;
 }
 
 .pt-4{
@@ -2042,6 +2097,10 @@ html{
 
 .lowercase{
   text-transform: lowercase;
+}
+
+.capitalize{
+  text-transform: capitalize;
 }
 
 .italic{
@@ -2186,6 +2245,11 @@ html{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.drop-shadow-lg{
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -2214,6 +2278,10 @@ html{
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.duration-200{
+  transition-duration: 200ms;
 }
 
 .duration-300{
